renamed BASE_URL to DISC_UI_URL (#30)
* renamed BASE_URL to DISC_UI_URL

* removed https and www from banner

--- a/src/banner.html
+++ b/src/banner.html
@@ -1,5 +1,5 @@
       <ul className="banner-background">
-		<li><a href={`https://www.${window.BASE_URL}/about/smart-city-projects`}><img src="assets/projects.png"/></a></li>
+		<li><a href={`${window.DISC_UI_URL}/about/smart-city-projects`}><img src="assets/projects.png"/></a></li>
 		<li><a href="/?q=transportation&amp;facets%5Bkeywords%5D%5B%5D=Transportation"><img src="assets/mobility.png"/></a></li>
 		<li><a href="/?q=parking"><img src="assets/parking.png"/></a></li>
 		<li><a href="/?q=environment"><img src="assets/environment.png"/></a></li>
@@ -7,5 +7,5 @@
 		<li><a href="/?q=health"><img src="assets/health.png"/></a></li>
 		<li><a href="/?q=food"><img src="assets/food.png"/></a></li>
 		<li><a href="/?q=&facets%5Bkeywords%5D%5B%5D=visualized-datasets&apiAccessible=false"><img src="assets/food.png"/></a></li> 
-		<li><a href={`https://www.${window.BASE_URL}/tools/datasets-curated-for-visualization`}><img src="assets/map.png"/></a></li>  
+		<li><a href={`${window.DISC_UI_URL}/tools/datasets-curated-for-visualization`}><img src="assets/map.png"/></a></li>  
       </ul>
